<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Restaurant</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detailpage">Detailpage</string>



    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_gmap">Gmap</string>
    <string name="title_activity_review">Review</string>
    <string name="title_activity_offer">Offer</string>
    <string name="title_activity_videopage">Videopage</string>
    <string name="title_activity_category">Category</string>
    <string name="title_activity_favourite">Favourite</string>
    <string name="title_activity_setting">Setting</string>
    <string name="pref_about_application">ABOUT APPLICATION</string>
    <string name="pref_version_summary">1.0</string>
    <string name="pref_version">Version</string>
    <string name="pref_about_developer">ABOUT DEVELOPER</string>
    <string name="app_recipient">admin@redixbit.com</string>
    <string name="pref_contact_app">Contact Us</string>
    <string name="pref_contact_app_summary">For more information contact us.</string>
    <string name="app_subject">Restaurant</string>
    <string name="email_no_client">No email client installed.</string>
    <string name="email_choose_from_client">Choose an email client from...</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_termcondition">Termcondition</string>
    <string name="opensans">OpenSans-Regular.ttf</string>
    <string name="Home_banner">no</string>
    <string name="category_banner">no</string>
    <string name="favourite_banner">no</string>
    <string name="review_banner">no</string>
    <string name="about_banner">no</string>
    <string name="term_banner">no</string>
    <string name="Home_show_ads">no</string>
    <string name="Detail_show_ads">no</string>
    <string name="Category_show_ads">no</string>
    <string name="Favourite_show_ads">no</string>
    <!--
    <string name="insertial_ad_key">ca-app-pub-3730886167471578/7823396048</string>
    <string name="banner_ad_key">ca-app-pub-3730886167471578/6129996844</string>










    -->
    <string name="facebook_app_id">637409849754983</string>
    <string name="insertial_ad_key">ca-app-pub-6257913950558441/4899635211</string>
    <string name="banner_ad_key">ca-app-pub-6257913950558441/3422902017</string>
    <!-- <string name="liveurl">http://restaurant.freeoda.com/</string>-->
    <string name="liveurl">http://restaurantfinder.freaktemplate.com/</string>
    <!-- <string name="liveurl">http://asia-brainpool.com/resfithkc/</string> -->
    <string name="title_activity_splash">Restaurant</string>

    <!-- menu page localize -->
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="favourites">Favourites</string>
    <string name="specialoffers">Special Offers</string>
    <string name="about">About us</string>
    <string name="social">Social Sharing</string>
    <string name="terms">Terms and Conditions</string>
    <string name="profile">Profile</string>

    <!-- navigation localize -->
    <string name="map">Map</string>
    <string name="review">Review</string>
    <string name="book">Book the Table</string>

    <!-- detail page localization -->
    <string name="available">AVAILABLE AT</string>
    <string name="timing">TIMING</string>
    <string name="totalrv">Total Review:</string>

    <!-- book table localize -->
    <string name="name">NAME</string>
    <string name="mail">MAIL ID</string>
    <string name="phone">PHONE NUMBER</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="person">NUMBER OF PERSON</string>
    <string name="order">BOOKNOW</string>
    <string name="experience">Your Experience</string>
    <string name="createprofile">CREATE PROFILE</string>
    <string name="updateprofile">UPDATE PROFILE</string>
    <string name="submitnew">Submit</string>
    <string name="cancelnew">Cancel</string>
    <string name="updatenew">Update</string>
    <string name="entername">Enter Your Name</string>
    <string name="entermail">Enter Your Mail Id</string>
    <string name="ok">OK</string>
    <!-- about us localize -->
    <string name="aboutparagraph1">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</string>
    <string name="aboutparagraph2">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</string>
    <string name="aboutparagraph3">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. "</string>
    <string name="aboutparagraph4">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="aboutparagraph5">Nam liber te conscient to factor tum poen legum odioque civiuda.</string>

    <!-- terms and condition localize -->
    <string name="termparagraph1">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</string>
    <string name="termparagraph2">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</string>
    <string name="termparagraph3">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. "</string>
    <string name="termparagraph4">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="termparagraph5">Nam liber te conscient to factor tum poen legum odioque civiuda.</string>

    <!-- internet connection -->

    <string name="Error">Error</string>
    <string name="internet">You have no internet connection.</string>
    <string name="servererror">No Data Found</string>
    <string name="commenthere">Comment Here</string>

    <!-- Home favourite page  share -->
    <string name="miles">miles</string>
    <string name="Loadmore">Load More</string>
    <string name="loading">Loading...</string>
    <string name="norecord">"No Record in Favourites"</string>
    <string name="sharelink">Share Links!</string>
    <string name="sharingstatement">The great advantage of a restaurant is that it\'s a refuge from home life.</string>

    <!-- quit dialog -->
    <string name="Quit">Quit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="statementquit">Are you sure you want to quit?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

</resources>