<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >

            <ImageView
                android:id="@+id/img_header"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/search_bg" />

            <TextView
                android:id="@+id/textView1"
                style="@style/MyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/about"
                android:typeface="sans" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/relativeLayout1" >

            <RelativeLayout
                android:id="@+id/rel3"
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="122dp"
                    android:layout_height="95dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/company_icon_about" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/rel3"
                android:text="@string/aboutparagraph1"
                android:typeface="sans"
                android:textColor="#000" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/aboutparagraph2"
                android:typeface="sans"
                android:textColor="#000" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView3"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/aboutparagraph3"
                android:typeface="sans"
                android:textColor="#000" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView4"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/aboutparagraph4"
                android:typeface="sans" 
                android:textColor="#000"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView5"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/aboutparagraph5"
                android:typeface="sans"
                android:textColor="#000" />
        </RelativeLayout>
    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_key" >
    </com.google.android.gms.ads.AdView>

</RelativeLayout>